Corrigindo links para a nova estrutura

--- a/html2.html
+++ b/html2.html
@@ -12,7 +12,7 @@
   <p>
     Cada momento contigo é especial e inesquecível. Que este novo ano da sua vida seja repleto de felicidade, amor e conquistas. Te amo! 
   </p>
-  <button onclick="location.href='html.html'">Voltar</button>
+  <button onclick="location.href='index.html'">Voltar</button>
 
   <script src="script.js"></script>
 </body>
